prueba auto deploy

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 											<option value="Tareas">Tareas</option>
 										</select>
 									</div>
-									<button type="submit" class="btn btn-secondary">Ingresar</button>
+									<button type="submit" class="btn btn-secondary"><i class="fas fa-sign-in-alt"></i> Ingresar</button>
 								</form>
 							</main>
 						</div>
